--- a/src/main/resources/languages/messages_en.yml
+++ b/src/main/resources/languages/messages_en.yml
@@ -45,6 +45,8 @@ commands:
   remove:
     usage: "&cUsage: &e/eco remove <player> <amount>"
     success: "&aRemoved &e{0} &afrom {1}'s balance"
+  migrate:
+    usage: "&cUsage: &e/eco migrate balances"
   help:
     header: "&6=== EcoXpert Commands ==="
     balance: "&e/eco balance [player] &7- Check balance"
@@ -159,6 +161,14 @@ bank:
   
 # Loan System
 loans:
+  usage:
+    request: "&cUsage: &e/loans request <amount>"
+    pay: "&cUsage: &e/loans pay <amount>"
+  help:
+    header: "&6=== Loans Commands ==="
+    request: "&e/loans request <amount> &7- Request a new loan"
+    pay: "&e/loans pay <amount> &7- Pay towards your loan"
+    status: "&e/loans status &7- View your current loan"
   request-sent: "&aLoan request for &e{0} &ahas been submitted"
   loan-approved: "&aYour loan of &e{0} &ahas been approved"
   loan-denied: "&cYour loan request has been denied: {0}"
@@ -167,6 +177,7 @@ loans:
   payment-overdue: "&cYour loan payment is overdue. Please pay immediately"
   credit-score: "&7Your credit score: &e{0}/1000"
   no-active-loans: "&7You have no active loans"
+  status: "&7Loan Outstanding: &e{0} &7(&e{1}&7 principal) &7| Rate: &e{2}"
   
 # Economic Events
 events:
@@ -177,6 +188,34 @@ events:
   market-crash: "&cMarket crash! All prices reduced by {0}%"
   economic-boom: "&aEconomic boom! All prices increased by {0}%"
   
+  admin:
+    help:
+      header: "&6=== Events Admin ==="
+      status: "&e/ecoxpert events status &7- View engine status"
+      active: "&e/ecoxpert events active &7- List active events"
+      history: "&e/ecoxpert events history &7- Show recent events"
+      trigger: "&e/ecoxpert events trigger <TYPE> &7- Trigger an event"
+      end: "&e/ecoxpert events end <ID> &7- End an active event"
+    unknown: "&cUnknown events subcommand"
+    status: "&7Events Engine: &eActive: {0} &7| Active Events: &e{1} &7| History: &e{2}"
+    active:
+      header: "&6=== Active Events ==="
+      none: "&7No active events"
+      item: "&7ID: &e{0} &7Name: &e{1} &7Type: &e{2} &7Duration: &e{3}m"
+    history:
+      header: "&6=== Recent Events ==="
+      none: "&7No past events"
+      item: "&7ID: &e{0} &7Name: &e{1} &7Type: &e{2} &7Status: &e{3}"
+    trigger:
+      usage: "&cUsage: &e/ecoxpert events trigger <TYPE>"
+    triggered: "&aTriggered event: &e{0}"
+    trigger:
+      failed: "&cFailed to trigger event: {0}"
+    unknown_type: "&cUnknown event type: {0}"
+    end:
+      usage: "&cUsage: &e/ecoxpert events end <ID>"
+    ended: "&aEnded event: &e{0}"
+    not_found: "&cActive event not found: {0}"
 # Professions System
 professions:
   selected: "&aYou are now a &e{0}"
@@ -194,6 +233,11 @@ admin:
   market-price-set: "&aSet {0} price to &e{1}"
   event-triggered: "&aTriggered economic event: &e{0}"
   database-backup: "&aDatabase backup created successfully"
+  migrate:
+    started: "&7Starting balance import from &e{0}&7..."
+    completed: "&aImport completed. Imported &e{0} &aaccounts"
+    none: "&7No external economy provider found via Vault"
+    error: "&cFailed to import balances: {0}"
   migration-started: "&aDatabase migration started"
   migration-completed: "&aDatabase migration completed successfully"
   
@@ -218,14 +262,27 @@ error:
 
   
 # Help Messages
-help:
-  header: "&6=== EcoXpert Pro Help ==="
-  footer: "&7Use &e/ecoxpert help <topic> &7for detailed information"
-  economy: "&e/eco balance &7- Check your balance"
-  market: "&e/market &7- Access the market system"
-  bank: "&e/bank &7- Access your bank account"
-  loans: "&e/loans &7- Manage your loans"
-  professions: "&e/profession &7- Manage your economic profession"
+  help:
+    header: "&6=== EcoXpert Pro Help ==="
+    footer: "&7Use &e/ecoxpert help <topic> &7for detailed information"
+    economy: "&e/eco balance &7- Check your balance"
+    market: "&e/market &7- Access the market system"
+    bank: "&e/bank &7- Access your bank account"
+    loans: "&e/loans &7- Manage your loans"
+    professions: "&e/profession &7- Manage your economic profession"
+
+economy:
+  admin:
+    help:
+      header: "&6=== Economy Admin ==="
+      status: "&e/ecoxpert economy status &7- Show provider and DB status"
+      diagnostics: "&e/ecoxpert economy diagnostics &7- Run safe diagnostics"
+    unknown: "&cUnknown economy subcommand"
+    status:
+      header: "&6=== Economy Status ==="
+      provider: "&7Provider: &e{0} &7(Plugin: &e{1}&7)"
+      plugins: "&7Detected economy plugins: &e{0}"
+      db: "&7Database: &e{0} &7| Connected: &e{1} &7| Healthy: &e{2}"
   
 # Update System
 updates:
