--- a/src/main/resources/languages/messages_en.yml
+++ b/src/main/resources/languages/messages_en.yml
@@ -359,6 +359,8 @@ professions:
   max-level: "&eYou have reached the maximum level for &e{0}"
   current: "Your current profession: {0}"
   available: "Available: {0}"
+  gui:
+    title: "Professions"
   
 # Admin Commands
 admin:
