--- a/src/main/resources/languages/messages_en.yml
+++ b/src/main/resources/languages/messages_en.yml
@@ -143,7 +143,7 @@ market:
     header: "&6=== Open Orders ({0}) ==="
     item: "&7ID &e{0} &7- &e{1}x {2} &7@ &e{3}"
     none: "&7No open orders found"
-  
+
   # GUI messages
   gui:
     title: "Market"
@@ -151,17 +151,70 @@ market:
     next-page: "Next Page"
     current-page: "Page {0} of {1}"
     close: "Close Market"
+    orders:
+      title: "Market Orders"
+      info:
+        title: "Order Book"
+        count: "Open orders: {0}"
+        page: "Page: {0}/{1}"
+      filter: "Filter: {0}"
+      help1: "Click: buy 1 | Right-click: 16"
+      help2: "Shift-click: buy max"
+      filter-label: "Filter: {0}"
+      set-filter-help: "Hold an item and click to set filter"
+      clear-filter: "Clear Filter"
+      clear-filter-help: "Show all orders"
+      sort-title: "Sort"
+      sort-label: "Sort: {0}"
+      sort-help: "Click to cycle sorting"
+      sort-mode:
+        price-asc: "Price ↑"
+        price-desc: "Price ↓"
+        remaining-asc: "Remaining ↑"
+        remaining-desc: "Remaining ↓"
+        expires-asc: "Expires ↑"
+        expires-desc: "Expires ↓"
+      select:
+        title: "Select Quantity"
+        amount: "Buy {0}"
+        amount_max: "Buy MAX"
+        confirm: "Confirm"
+        cancel: "Cancel"
+        info:
+          title: "Order"
+          unit_price: "Unit price: {0}"
+          chosen: "Chosen: {0}"
+          total: "Total: {0}"
+      item:
+        header: "Order #{0}"
+        material: "Item: {0}"
+        price: "Unit price: {0}"
+        remaining: "Remaining: {0}"
+        expires: "Expires: {0}"
+        expired: "expired"
+        expires_in_hm: "{0}h {1}m"
+        expires_in_m: "{0}m"
+        seller: "Seller: {0}"
+        help1: "Click to buy 1"
+        help2: "Right-click to buy 16"
+        help3: "Shift-click to buy remaining"
     
     info:
       title: "Market Information"
       items: "Total Items: {0}"
       page: "Page: {0}/{1}"
+      role-bonus: "Role bonus: buy {0}, sell {1}"
+      category-bonus: "Category {0}: buy {1}, sell {2}"
+      event-bonus: "Events: buy {0}, sell {1}"
       help1: "Click to buy 1 item"
       help2: "Shift-click to sell all"
+      help3: "Use 'Open Orders' to view listings"
     category-label: "Category: {0}"
     category-help: "Click to cycle categories"
     letter-label: "Filter: {0}"
     letter-help: "Click to cycle first-letter filter"
+    clear-filters-label: "Clear Filters"
+    clear-filters-help: "Resets category and letter filters"
     sell-hand-label: "Sell Hand by $"
     sell-hand:
       title: "Sell Item in Hand"
@@ -174,7 +227,9 @@ market:
     item:
       header: "Market Item"
       buy-price: "Buy: {0}"
+      effective-buy: "Effective Buy: {0}"
       sell-price: "Sell: {0}"
+      effective-sell: "Effective Sell: {0}"
       not-buyable: "Cannot buy this item"
       not-sellable: "Cannot sell this item"
       volume: "Volume: {0}"
@@ -478,3 +533,5 @@ numbers:
   million: "M"
   billion: "B"
   trillion: "T"
+    orders-button: "Open Orders"
+    orders-button-help: "Click to browse order book"
