--- a/src/main/resources/languages/messages_es.yml
+++ b/src/main/resources/languages/messages_es.yml
@@ -169,6 +169,55 @@ market:
     header: "&6=== Órdenes Abiertas ({0}) ==="
     item: "&7ID &e{0} &7- &e{1}x {2} &7@ &e{3}"
     none: "&7No hay órdenes abiertas"
+
+  gui:
+    orders:
+      title: "Ordenes del Mercado"
+      info:
+        title: "Libro de Órdenes"
+        count: "Órdenes abiertas: {0}"
+        page: "Página: {0}/{1}"
+      filter: "Filtro: {0}"
+      help1: "Click: comprar 1 | Click derecho: 16"
+      help2: "Shift-click: comprar máximo"
+      filter-label: "Filtro: {0}"
+      set-filter-help: "Sostén un ítem y haz click para filtrar"
+      clear-filter: "Quitar Filtro"
+      clear-filter-help: "Mostrar todas las órdenes"
+      sort-title: "Ordenar"
+      sort-label: "Ordenar: {0}"
+      sort-help: "Click para cambiar el orden"
+      sort-mode:
+        price-asc: "Precio ↑"
+        price-desc: "Precio ↓"
+        remaining-asc: "Restante ↑"
+        remaining-desc: "Restante ↓"
+        expires-asc: "Expira ↑"
+        expires-desc: "Expira ↓"
+      select:
+        title: "Seleccionar Cantidad"
+        amount: "Comprar {0}"
+        amount_max: "Comprar MÁX"
+        confirm: "Confirmar"
+        cancel: "Cancelar"
+        info:
+          title: "Orden"
+          unit_price: "Precio unitario: {0}"
+          chosen: "Elegido: {0}"
+          total: "Total: {0}"
+      item:
+        header: "Orden #{0}"
+        material: "Ítem: {0}"
+        price: "Precio unitario: {0}"
+        remaining: "Restante: {0}"
+        expires: "Expira: {0}"
+        expired: "expirada"
+        expires_in_hm: "{0}h {1}m"
+        expires_in_m: "{0}m"
+        seller: "Vendedor: {0}"
+        help1: "Click para comprar 1"
+        help2: "Click derecho para comprar 16"
+        help3: "Shift-click para comprar el resto"
   
   # GUI messages
   gui:
@@ -182,12 +231,18 @@ market:
       title: "Información del Mercado"
       items: "Total de Ítems: {0}"
       page: "Página: {0}/{1}"
+      role-bonus: "Bono de rol: compra {0}, venta {1}"
+      category-bonus: "Categoría {0}: compra {1}, venta {2}"
+      event-bonus: "Eventos: compra {0}, venta {1}"
       help1: "Click para comprar 1 ítem"
       help2: "Shift-click para vender todo"
+      help3: "Usa 'Ver Órdenes' para ver listados"
     category-label: "Categoría: {0}"
     category-help: "Click para cambiar categoría"
     letter-label: "Filtro: {0}"
     letter-help: "Click para cambiar filtro por letra"
+    clear-filters-label: "Limpiar Filtros"
+    clear-filters-help: "Restablece categoría y letra"
     sell-hand-label: "Vender en Mano por $"
     sell-hand:
       title: "Vender Ítem en Mano"
@@ -200,7 +255,9 @@ market:
     item:
       header: "Ítem del Mercado"
       buy-price: "Compra: {0}"
+      effective-buy: "Compra efectiva: {0}"
       sell-price: "Venta: {0}"
+      effective-sell: "Venta efectiva: {0}"
       not-buyable: "No se puede comprar este ítem"
       not-sellable: "No se puede vender este ítem"
       volume: "Volumen: {0}"
@@ -451,3 +508,5 @@ numbers:
   million: "M"
   billion: "B"
   trillion: "T"
+    orders-button: "Ver Órdenes"
+    orders-button-help: "Click para abrir el libro de órdenes"
